test/invalid/fc36994_TestInheritance/SelfExtendingTest.plume
/**
 * For testing Class self inheritance
 * @author 36994, César Santos
 */
class SelfExtendingTest extends SelfExtendingTest is
  method nothing : () -> Boolean is
    true